--- a/Dockerfile-codes
+++ b/Dockerfile-codes
@@ -17,7 +17,7 @@ RUN apt-get install -y build-essential gfortran python-dev \
   python-nose python-numpy python-setuptools python-docutils \
   python-h5py python-setuptools git openjdk-8-jdk python-pip
 
-RUN pip install cython scipy matplotlib astropy
+RUN pip install cython scipy matplotlib==2.02
 RUN easy_install mpi4py
 
 #RUN mkdir /amuse/prerequisites
