--- a/Dockerfile-python3-codes-gpu
+++ b/Dockerfile-python3-codes-gpu
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM nvidia/cuda:10.0-devel-ubuntu16.04
 
 # Pull AMUSE from Github
 RUN apt-get update && apt-get install -y git wget
