--- a/Dockerfile-11.2-codes
+++ b/Dockerfile-11.2-codes
@@ -3,7 +3,6 @@ FROM ubuntu:16.04
 # Pull AMUSE from Github
 RUN apt-get update && apt-get install -y git wget
 RUN apt-get install -y build-essential curl g++ gfortran gettext zlib1g-dev
-#RUN git clone https://github.com/amusecode/amuse.git
 
 RUN wget https://github.com/amusecode/amuse/archive/release-11.2.tar.gz
 RUN tar -xf release-11.2.tar.gz
@@ -17,25 +16,16 @@ RUN apt-get install -y build-essential gfortran python-dev \
   python-nose python-numpy python-setuptools python-docutils \
   python-h5py python-setuptools git openjdk-8-jdk python-pip
 
-RUN pip install cython scipy matplotlib astropy
+RUN pip install --upgrade pip
+RUN pip install cython scipy
 RUN easy_install mpi4py
 
-#RUN mkdir /amuse/prerequisites
-
-#ENV PREFIX /amuse/prerequisites
-#ENV PATH ${PREFIX}/bin:${PATH}
-#ENV LD_LIBRARY_PATH ${PREFIX}/lib:${LD_LIBRARY_PATH}
 ENV FC gfortran
 ENV F77 gfortran
-
-#RUN cd /amuse/doc/install && ./install-python.sh 
-#RUN cd /amuse/doc/install && ./install.py install
 
 RUN cd /amuse/ && ./configure
 
 RUN cd /amuse/ && make DOWNLOAD_CODES=1
-
-#RUN cd /amuse/ && mpiexec nosetests -v
 
 ENTRYPOINT ["/amuse/"]
 CMD ["amuse.sh"]
