--- a/Dockerfile-python3-codes
+++ b/Dockerfile-python3-codes
@@ -37,6 +37,8 @@ RUN cd /amuse/ && ./configure PYTHON=/usr/bin/python3
 RUN cd /amuse/ && make build3 DOWNLOAD_CODES=1
 
 #RUN cd /amuse/ && mpiexec nosetests -v
-
-ENTRYPOINT ["/amuse/"]
+ENV PATH /amuse:${PATH}
+RUN cd / && ls -a
+RUN cd /amuse/ && ls
+#ENTRYPOINT ["/amuse/"]
 CMD ["amuse.sh"]
