--- a/Dockerfile-11.2-gpu
+++ b/Dockerfile-11.2-gpu
@@ -23,9 +23,9 @@ RUN easy_install mpi4py
 ENV FC gfortran
 ENV F77 gfortran
 
-RUN cd /amuse/ && ./configure --enable-cuda
+RUN cd /amuse/ && ./configure --enable-cuda --with-hdf5=/usr/lib/x86_64-linux-gnu/hdf5/serial
 
 RUN cd /amuse/ && make
 
-ENTRYPOINT ["/amuse/"]
+ENV PATH /amuse:${PATH}
 CMD ["amuse.sh"]
