--- a/Dockerfile-11.2
+++ b/Dockerfile-11.2
@@ -24,7 +24,7 @@ RUN easy_install mpi4py
 ENV FC gfortran
 ENV F77 gfortran
 
-RUN cd /amuse/ && ./configure
+RUN cd /amuse/ && ./configure --with-hdf5=/usr/lib/x86_64-linux-gnu/hdf5/serial
 
 RUN cd /amuse/ && make
 
@@ -32,5 +32,5 @@ RUN cd /amuse/ && ls
 
 ENV PATH /amuse/:${PATH}
 
-#ENTRYPOINT ["/amuse/"]
+ENV PATH /amuse:${PATH}
 CMD ["amuse.sh"]
