--- a/Dockerfile-python3-codes
+++ b/Dockerfile-python3-codes
@@ -32,7 +32,7 @@ ENV F77 gfortran
 #RUN cd /amuse/doc/install && ./install-python.sh 
 #RUN cd /amuse/doc/install && ./install.py install
 RUN whereis python3
-RUN cd /amuse/ && ./configure PYTHON=/usr/bin/python3
+RUN cd /amuse/ && ./configure PYTHON=/usr/bin/python3 --with-hdf5=/usr/lib/x86_64-linux-gnu/hdf5/serial
 
 RUN cd /amuse/ && make build3 DOWNLOAD_CODES=1
 
