Add installing into Python 3
Since no amuse.sh created, need this to make it work

--- a/Dockerfile-python3
+++ b/Dockerfile-python3
@@ -42,5 +42,7 @@ RUN cd /amuse/build/lib/amuse && ls -a
 
 RUN cd /home/ && ls
 
+RUN cd /amuse/ && python3 setup.py install
+
 ENV PATH /amuse/:${PATH}
-CMD ["amuse.sh"]
+CMD ["python3"]
